@@ -6,6 +6,8 @@ import com.order_manager.entity.OrderEntity;
 import com.order_manager.entity.OrderStatus;
 import com.order_manager.entity.ProductEntity;
 import com.order_manager.entity.UserEntity;
+import com.order_manager.exception.OrderNotFoundException;
+import com.order_manager.exception.UserNotFoundException;
 import com.order_manager.repository.OrderRepository;
 import com.order_manager.repository.ProductRepository;
 import com.order_manager.repository.UserRepository;
@@ -14,7 +16,6 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,11 +27,11 @@ public class OrderService {
     private final NotificationService notificationService;
 
 
-    public OrderResponse createOrder(String username, List<Long> listOfProductId, int quantity) {
+    public OrderResponse createOrder(String username, OrderRequest request) {
         UserEntity user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+                .orElseThrow(() -> new UserNotFoundException("User not found"));
 
-        List<ProductEntity> products = productRepository.findByIdIn(listOfProductId);
+        List<ProductEntity> products = productRepository.findByIdIn(request.listOfProductId());
         if (products.isEmpty()) {
             throw new EntityNotFoundException("No valid products found");
         }
@@ -38,24 +39,25 @@ public class OrderService {
         OrderEntity order = OrderEntity.builder()
                 .user(user)
                 .products(products)
-                .quantity(quantity)
+                .quantity(request.quantity())
                 .status(OrderStatus.PENDING)
                 .build();
 
         return mapToResponse(orderRepository.save(order));
     }
 
+    @Transactional
     public List<OrderResponse> getOrdersForUser(String username) {
         return orderRepository.findByUserUsername(username)
                 .stream()
-                .map(OrderResponse::new)
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
     @Transactional
     public OrderResponse updateOrderStatus(Long orderId, OrderStatus status) {
         OrderEntity order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new EntityNotFoundException("Order not found"));
+                .orElseThrow(() -> new OrderNotFoundException("Order not found"));
         order.setStatus(status);
 
         notificationService.sendOrderStatusChangeNotification(order.getUser().getEmail(), orderId, status);
@@ -71,7 +73,7 @@ public class OrderService {
         }
     }
 
-    public OrderResponse mapToResponse(OrderEntity order) {
+    private OrderResponse mapToResponse(OrderEntity order) {
         return new OrderResponse(order);
     }
 }
